--- a/01. Introduction au Web et bases du Développement Web Front-End.md
+++ b/01. Introduction au Web et bases du Développement Web Front-End.md
@@ -287,7 +287,7 @@ Les balises de liste permettent de créer des listes ordonnées ou non ordonnée
 
 - **`<ul>` :** Balise pour créer une liste non ordonnée (liste à puces).
 - **`<ol>` :** Balise pour créer une liste ordonnée (liste numérotée).
-- **`<li>` :** Balise d'élément de liste à utiliser à l'intérieur de <ul> ou <ol>.
+- **`<li>` :** Balise d'élément de liste à utiliser à l'intérieur de `<ul>` ou `<ol>`.
 
 #### 5. Balises de formulaire :
 
